--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 install_requires =
-    dearpygui >= 0.8
+    dearpygui == 0.8.64
 
 [options.packages.find]
 where = src
